--- a/app/src/main/res/layout/item_container_note.xml
+++ b/app/src/main/res/layout/item_container_note.xml
@@ -52,7 +52,7 @@
                     android:layout_marginEnd="12dp"
                     android:includeFontPadding="false"
                     android:text="@{model.title}"
-                    android:textColor="@color/colorWhite"
+                    android:textColor="?android:attr/textColorPrimary"
                     android:textSize="16dp"
                     android:textStyle="bold"
                     android:maxLines="2"
