--- a/app/src/main/res/layout/layout_decorations.xml
+++ b/app/src/main/res/layout/layout_decorations.xml
@@ -88,13 +88,13 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/imageColorBlack"
+            android:id="@+id/imageColorPurple"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:background="@drawable/background_note_color_black"
+            android:background="@drawable/background_note_color_purple"
             android:padding="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageColorBlue"
@@ -110,7 +110,7 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageColorBlack"
+            app:layout_constraintStart_toEndOf="@+id/imageColorPurple"
             app:layout_constraintTop_toTopOf="parent" />
 
         <View
@@ -129,8 +129,9 @@
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:layout_margin="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/layoutNoteColor"
-        tools:layout_editor_absoluteX="10dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layoutNoteColor">
 
         <ImageView
             android:id="@+id/imageView2"
@@ -161,10 +162,12 @@
         android:layout_height="35dp"
         android:layout_margin="10dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/layoutDeleteNote"
-        app:layout_constraintTop_toBottomOf="@+id/layoutAddImage"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="48dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.526"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layoutAddImage">
 
         <ImageView
             android:id="@+id/imageView3"
@@ -172,10 +175,10 @@
             android:layout_height="24dp"
             android:layout_marginStart="24dp"
             android:src="@drawable/ic_web_link"
-            app:tint="@color/colorIcons"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/colorIcons" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -197,7 +200,8 @@
         android:layout_marginBottom="8dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         tools:visibility="visible">
 
         <ImageView
