--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mainTop_layout"
@@ -96,6 +95,7 @@
             android:layout_height="match_parent"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="68dp">
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/Rv_notes"
                 android:layout_width="match_parent"
