--- a/app/src/main/res/layout/layout_delete_note.xml
+++ b/app/src/main/res/layout/layout_delete_note.xml
@@ -18,7 +18,7 @@
         android:layout_marginTop="8dp"
         android:contentDescription="@string/app_name"
         android:src="@drawable/ic_delete"
-        android:tint="@color/colorWhite"
+        app:tint="@color/colorWhite"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
