--- a/app/src/main/res/layout/layout_label.xml
+++ b/app/src/main/res/layout/layout_label.xml
@@ -11,35 +11,20 @@
 
     <ImageView
         android:id="@+id/imageLabel"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:src="@drawable/ic_label"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:tint="@color/colorWhite" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="Add Label"
-        android:textColor="@color/colorWhite"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/imageLabel"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageLabel"
-        app:layout_constraintTop_toTopOf="@+id/imageLabel" />
-
     <EditText
         android:id="@+id/inputLabel"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="35dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginEnd="8dp"
         android:background="@null"
         android:gravity="center_vertical"
@@ -47,18 +32,21 @@
         android:imeOptions="actionDone"
         android:importantForAutofill="no"
         android:inputType="textUri"
+        android:maxLines="1"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
         android:textColor="@color/colorWhite"
         android:textColorHint="@color/colorTextHint"
+        app:layout_constraintBottom_toBottomOf="@+id/imageLabel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Rv_label" />
+        app:layout_constraintStart_toEndOf="@+id/imageLabel"
+        app:layout_constraintTop_toTopOf="@+id/imageLabel" />
 
     <TextView
         android:id="@+id/textAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:padding="8dp"
@@ -66,7 +54,7 @@
         android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputLabel" />
+        app:layout_constraintTop_toBottomOf="@+id/Rv_label" />
 
     <TextView
         android:id="@+id/textCancel"
@@ -84,10 +72,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/inputLabel"
+        tools:listitem="@layout/item_container_label"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
