--- a/app/src/main/res/layout/item_container_note.xml
+++ b/app/src/main/res/layout/item_container_note.xml
@@ -84,15 +84,17 @@
                     android:id="@+id/txtDateTime"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="8dp"
                     android:animateLayoutChanges="true"
                     android:includeFontPadding="false"
                     android:text=""
                     android:textColor="@color/colorNoteSubtitleText"
                     android:textSize="12dp"
-                    app:layout_constraintBottom_toBottomOf="@+id/textView5"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/textView5"
+                    app:layout_constraintTop_toBottomOf="@+id/txtSubtitle"
                     tools:text="2020/11/30" />
 
                 <ImageView
@@ -108,17 +110,18 @@
                     app:layout_constraintTop_toTopOf="@+id/txtTitle" />
 
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/txtLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:layout_marginBottom="12dp"
+                    android:layout_marginBottom="8dp"
                     android:background="@drawable/background_note_subject"
-                    android:text="Notes"
+                    android:text="@{model.label}"
                     android:textSize="12dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/txtSubtitle"
-                    app:layout_constraintTop_toBottomOf="@+id/txtSubtitle" />
+                    app:layout_constraintTop_toBottomOf="@+id/txtSubtitle"
+                    tools:text="Note" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
