--- a/app/src/main/res/layout/layout_label.xml
+++ b/app/src/main/res/layout/layout_label.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layoutAddUrlContainer"
+    android:id="@+id/layoutAddLabelContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:src="@drawable/ic_label"
+        android:src="@drawable/ic_search"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:tint="@color/colorWhite" />
@@ -28,7 +28,7 @@
         android:layout_marginEnd="8dp"
         android:background="@null"
         android:gravity="center_vertical"
-        android:hint="Add Label"
+        android:hint="Search Label..."
         android:imeOptions="actionDone"
         android:importantForAutofill="no"
         android:inputType="textUri"
