--- a/app/src/main/res/layout/item_container_label.xml
+++ b/app/src/main/res/layout/item_container_label.xml
@@ -33,6 +33,7 @@
             android:layout_marginEnd="8dp"
             android:checkMark="?android:attr/listChoiceIndicatorMultiple"
             android:gravity="center"
+            android:checked="@{model.checked}"
             android:text="@{model.title}"
             app:layout_constraintBottom_toBottomOf="@+id/imageView5"
             app:layout_constraintEnd_toEndOf="parent"
