--- a/app/src/main/res/drawable/background_note_label.xml
+++ b/app/src/main/res/drawable/background_note_label.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <stroke
-        android:color="@color/colorNoteSubtitleText"
+        android:color="@color/colorWhite"
         android:width="1dp"/>
     <corners
         android:radius="5dp" />
@@ -11,5 +11,4 @@
         android:bottom="3dp"
         android:left="5dp"
         android:right="5dp" />
-
 </shape>
