--- a/app/src/main/res/layout/item_container_note.xml
+++ b/app/src/main/res/layout/item_container_note.xml
@@ -117,10 +117,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp"
-                    android:background="@drawable/background_note_subject"
+                    android:background="@drawable/background_note_label"
                     android:ellipsize="end"
                     android:singleLine="true"
                     android:text="@{model.label}"
+                    android:textColor="?android:attr/textColorPrimary"
                     android:textSize="12dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/txtDateTime"
