--- a/app/src/main/res/menu/main_note.xml
+++ b/app/src/main/res/menu/main_note.xml
@@ -3,19 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/main_menu_shortcut_photo"
-        android:title="Add Photo"
+        android:title="사진 추가하기"
         android:icon="@drawable/ic_image"
         app:showAsAction="always"
         />
     <item
         android:id="@+id/main_menu_edit"
         android:title="편집"
-        app:showAsAction="never"
-        />
-
-    <item
-        android:id="@+id/main_menu_about"
-        android:title="About"
         app:showAsAction="never"
         />
 </menu>
