--- a/app/src/main/res/layout/layout_label.xml
+++ b/app/src/main/res/layout/layout_label.xml
@@ -5,7 +5,6 @@
     android:id="@+id/layoutAddLabelContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
     android:background="@drawable/background_dialog">
 
     <ImageView
@@ -16,8 +15,7 @@
         android:layout_marginTop="16dp"
         android:src="@drawable/ic_search"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/colorWhite" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/inputLabel"
