--- a/app/src/main/res/layout/layout_label.xml
+++ b/app/src/main/res/layout/layout_label.xml
@@ -72,7 +72,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inputLabel">
@@ -96,7 +96,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="8dp"
             android:checked="false"
-            android:text=""
+            android:text="라벨 만들기"
             app:layout_constraintBottom_toBottomOf="@+id/imageView5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView5"
