--- a/app/src/main/res/layout/item_container_note.xml
+++ b/app/src/main/res/layout/item_container_note.xml
@@ -127,7 +127,7 @@
                     android:layout_marginBottom="8dp"
                     android:ellipsize="end"
                     android:singleLine="true"
-                    android:text="@{model.label}"
+                    android:text="@{model.labelTitle}"
                     android:textColor="@color/colorText"
                     android:textSize="12dp"
                     app:layout_constraintBottom_toBottomOf="parent"
